--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
 		<div class="test-box4">test-box4</div>
 		<div class="test-box5">test-box5</div>
 	</div>
-	<script src="libs/jquery-3.1.0.min.js"></script>
+	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="js/exct2.js"></script>
 
 
