lilte fix index.html and add box-shadow--width property wrapper xd

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Base</title>
-    <link rel="stylesheet" href="css/main.css">
+    <!--<link rel="stylesheet" href="css/main.css">-->
 <!--    <link rel="stylesheet" href="css/clicktune.css">-->
   </head>
 
@@ -82,7 +82,62 @@
 -->
 <!--	</span>-->
 <!--box-shadow: 24px 37px 51px 5px rgba(0,0,0,0.45);-->
+	<style>
+		body {
+			background-color: white;
+			text-align: center;
+			font-size: 16px;
+			color: black; }
 
+		.wrap-box {
+			position: relative; }
+
+		.test-box1 {
+			background-color: aqua;
+			width: 200px;
+			height: 200px;
+			display: inline-block;
+			margin-right: 30px;
+			opacity: 0.8; }
+
+		.test-box2 {
+			background-color: bisque;
+			width: 200px;
+			height: 200px;
+			display: inline-block;
+			margin-right: 30px;
+			box-shadow:  12em 5px 7px 9px aqua; }
+
+		.test-box3 {
+			box-shadow: red 2px 4px 7px 2px;
+			background-color: coral;
+			width: 200px;
+			height: 200px;
+			display: inline-block;
+			margin-right: 30px;
+			opacity: 0.1; }
+		.test-box3 .text-blocl9 ul {
+			background-color: #fff; }
+		.test-box3 .text-blocl9 ul li a {
+			color: red; }
+
+		.test-box4 {
+			background-color: aqua;
+			width: 200px;
+			height: 200px;
+			display: inline-block;
+			margin-right: 30px;
+			box-shadow: rgba(20, 0, 190, 0.8) 5px 6rem 7px 5px; }
+
+		.test-box5 {
+			background-color: aqua;
+			width: 200px;
+			height: 200px;
+			display: inline-block;
+			margin-right: 30px;
+			box-shadow: 25px 20px 4pc 5px red;
+		}
+	</style>
 
 <style>
 /*
@@ -101,6 +156,7 @@
 		display: block;
 	}
 */
+
 </style>
 
 </body>
